--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,13 +17,13 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
-			and is based on a transcription produced in 2005 by<br/>
-			<b epub:type="z3998:personal-name">TRANSCRIBER_1</b>, <b epub:type="z3998:personal-name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b>An Anonymous Volunteer</b>,<br/>
+			and is based on a transcription produced in 1999 by<br/>
+			<b>An Anonymous Volunteer</b>,<br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2014">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			and on digital scans available at<br/>
+			<a href="https://www.google.com/books/edition/The_Lodger/vmw6AQAAMAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
 			a painting completed in YEAR by<br/>
