--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<b>An Anonymous Volunteer</b>,<br/>
 			and is based on a transcription produced in 1999 by<br/>
-			<b>An Anonymous Volunteer</b>,<br/>
+			<b>An Anonymous Volunteer</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2014">Project Gutenberg</a><br/>
 			and on digital scans available at<br/>
