--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b>An Anonymous Volunteer</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2014">Project Gutenberg</a><br/>
-			and on digital scans available at<br/>
+			and on digital scans from<br/>
 			<a href="https://www.google.com/books/edition/The_Lodger/vmw6AQAAMAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Ennui</i>,<br/>
